--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sean Ockert - web developer and designer</title>
-    <meta name="description" content="I am a creative, full-stack web professional with a focus on usability and front-end development. I'm also passionate about renewable energy, with experience building hydrogen storage systems and a published paper on Mg-Ni hydrides." />
-    <link href="https://seanockert.com/images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="https://seanockert.com/css/style.css?rev=afb0d2738e57d6a1dca39a7754e9a488" rel="stylesheet" type="text/css">
+    <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
+    <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
+    <link href="dist/css/style.css?rev=7f33d3f887887d57174c065a34c3e590" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
@@ -67,10 +67,10 @@
         <div class="home-content">
           <div class="inner">
             <div class="column" id="projects">
-            <div class="intro">
+            <header class="intro">
               <strong id="i">Hi there<span>,</span></strong> 
-              <p>Need a web expert for your next project? I'm a creative, professional web guy from sunny Brisbane. <a href="mailto:hello@seanockert.com" title="Email Sean">Hit me up</a> or <a href="sean-ockert-resume-2018.pdf" title="Download Sean's resume" class="no-barba">view resume</a>.</p>
-            </div>
+              <p>Need a web expert for your next project? I'm a creative, professional web developer from Brisbane, with ten years of experience. <a href="mailto:hello@seanockert.com" title="Email Sean">Drop me a line</a> or <a href="sean-ockert-resume-2018.pdf" title="Download Sean's resume" class="no-barba">view resume</a>.</p>
+            </header>
             
             <h2><span>Recent work</span></h2>
             <ul class="no-list">
@@ -118,8 +118,14 @@
               </li>
             </ul> 
 
-            <h2><span>Some side projects</span></h2>
+            <h2><span>Side projects</span></h2>
             <ul class="no-list">
+              <li>
+                <a href="https://so-neto-email.surge.sh/" title="View Neto Email Content Generator project">
+                  <h3>Email Content Generator</h3> 
+                  <p>Quickly build emails content from <span>pre-witten sections.</span></p>
+                  <div class="link">View project &rarr;</div>
+                </a>
               <li>
                 <a href="https://so-tinysums.surge.sh/" title="View TinySums project">
                   <h3>Tiny Sums</h3> 
