Content updates - Neto

--- a/fruit-ninja/index.html
+++ b/fruit-ninja/index.html
@@ -121,10 +121,10 @@
         </article>
 
         <footer class="page-cta">
-          <h2><a href="mailto:hello@seanockert.com" title="Send me an email">
-            <img src="../images/face.png" alt="Sean's face">
-            Let's work together<span>.</span></a>
-          </h2>
+          <h4><a href="mailto:hello@seanockert.com" title="Send me an email">
+            <img src="../images/face.png" alt="Sean's face" height="70" width="60">
+            Like what you see? Let's work together<span>.</span></a>
+          </h4>
           <ul class="nolist">
             <li><a href="https://twitter.com/seanockert" title="Follow me on Twitter">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with me on LinkedIn">LinkedIn</a></li>
