--- a/neto/index.html
+++ b/neto/index.html
@@ -40,41 +40,43 @@
           <div class="row">
             <p>Neto offers a SaaS platform for businesses to run their ecommerce store and point-of-sale on, as well as tools to manage their stock management and warehouses. They also do in-house website development for clients who use the ecommerce platform.</p>
 
+            <figure>
+              <a href="https://www.netohq.com" title="Visit the Neto website"><img src="../images/page/screen-neto-homepage.jpg" alt="Screenshot of the Neto homepage" height="768" width="1024"></a>
+            </figure> 
+
             <p>I joined in 2017 to take ownership of the Neto public website.</p>
 
             <p>Along with building out our web capabilities, my role also encompassed assisting with paid acquisition, marketing campaigns, designing print assets, analytics, copywriting, user testing and product design.</p>
 
    
-            <figure>
-              <a href="https://www.netohq.com" title="Visit the Neto website"><img src="../images/page/screen-neto-homepage.jpg" alt="Screenshot of the Neto homepage"></a>
-            </figure> 
+            
 
  
             <h3>Migrating the Neto public website</h3>
 
             <p>The website is key for acquiring new customers, as Neto’s acquisition (and our target metrics) focused on converting prospects to a free trial of the platform; followed up by a sales call.</p>
 
-            <p>Neto had built up its customer-base from Australian retailers but was looking to attract international sellers when I joined. This involved not only changes to the platform, but also moving their established site from an Australian domain to a new global domain: neto.com.au to netohq.com.
+            <p>Neto had built up its customer-base from Australian retailers but was looking to attract international sellers when I joined. This involved not only changes to the platform, but also moving their established site from an Australian domain to a new global domain: <em>neto.com.au</em> to <em>netohq.com</em>.
 
             <p>With multiple stakeholders, outdated content, and poor site accessibility, migrating the website presented some technical and logistical challenges.</p>
 
             <h4>Setting up a new shop</h4>
 
-            <p><em>Neto.com.au</em> was built on Neto’s own SaaS platform, which although good for ecommerce, lacked the capability required to be the kind of content management system that we needed. I took this opportunity to completely rebuild the site with a dedicated CMS and modern web standards. This would help reach our migration goals, which were:</p>
+            <p>The website on the <em>neto.com.au</em> domain was built on Neto’s own SaaS platform, which&mdash;although good for ecommerce&mdash;lacked the capability required to be the kind of content management system that we needed. I took this opportunity to completely rebuild the site with a dedicated CMS and modern web standards. This would help reach our migration goals, which were:</p>
 
-            <ul>
-            <li>Market to customers outside of Australia</li>
-            <li>Allow anyone to create campaign landing pages</li>
-            <li>Easy-to-use CMS for non-technical staff</li>
-            <li>Faster blog publishing</li>
-            <li>Assets managed from one place</li>
-            <li>Document history for legal pages</li>
-            <li>Faster development and iteration of the website</li>
-            <li>Improved SEO</li>
-            <li>Improved visitor experience</li>
-            </ul>
+            <ol>
+              <li>Market to customers outside of Australia</li>
+              <li>Allow anyone to create campaign landing pages</li>
+              <li>Easy-to-use CMS for non-technical staff</li>
+              <li>Faster blog publishing</li>
+              <li>Assets managed from one place</li>
+              <li>Document history for legal pages</li>
+              <li>Faster development and iteration of the website</li>
+              <li>Improved SEO</li>
+              <li>Improved all-round visitor experience</li>
+            </ol>
 
-            <p>I evaluated a few content management systems (WordPress was dropped early) and settled on Craft CMS, for its ease of development, flexible template model and community support.</p>
+            <p>I evaluated a few content management systems (WordPress was dropped early) and settled on <strong>Craft CMS</strong>, for its ease of development, flexible template model and community support.</p>
 
             <p>Over a dozen non-technical people in the company have used the new CMS and all have found Craft intuitive and easy to use from a publishing side.</p>
 
@@ -82,15 +84,21 @@
 
             <h4>Migration pain points</h4>
 
-            <p>There are delicate SEO issues with migrating existing content to a new domain. It’s a chicken and egg problem of attempting to build up domain authority on the new netohq.com domain while not impacting organic traffic on the existing neto.com.au domain.</p> 
+            <p>There are delicate SEO issues with migrating existing content to a new domain. It’s a chicken and egg problem of attempting to build up domain authority on the new <em>netohq.com</em> domain while not impacting organic traffic on the existing <em>neto.com.au</em> domain.</p> 
 
             <p>We settled on a hybrid approach of migrating one section of the website at a time (eg. add-ons directory), implementing the appropriate hreflang tags and measuring the impact. After a few weeks of this, we would then 301 redirect that section.</p>
 
-            <p>For some sections, especially the documentation, we saw an initial drop-off in traffic, which slowly started to recover after the new pages were indexed by Google and netohq.com domain authority increased.</p>
+            <p>For some sections, especially the documentation, we saw an initial drop-off in traffic, which slowly started to recover after the new pages were indexed by Google and <em>netohq.com</em> domain authority increased.</p>
 
-            <p>Neto had spent a lot with the previous SEO agency on link building for neto.com.au so the CEO was very adamant that we not impact business. Thankfully, most of our acquisition was paid so the initial reduction in organic traffic was mitigated. The move was necessary and sometimes you have to ignore sunk costs to move forwards.</p>
+            <p>Neto had invested a lot in SEO for <em>neto.com.au</em> with an agency, especially link building. So the CEO was very adamant that we not impact the progress made. Thankfully, most of our acquisition was paid so the initial reduction in organic traffic was mitigated. The move was necessary and sometimes you have to ignore sunk costs to move forwards.</p>
 
-            <h3>We have no landing pages?</h3>
+            <figure>
+              <img src="../images/page/screen-neto-roadmap.jpg" alt="Screenshot of a Neto roadmap" height="404" width="877">
+              <figcaption>Neto roadmap page</figcaption>
+            </figure> 
+
+            <h3>What? We have no landing pages?</h3>
+
             <p>Before I joined, the marketing team had no way to create dedicated campaign landing pages. Most paid acquisition were directed to the homepage or the free trial page, which were low relevance to the actual campaigns and therefore gave us junk quality scores.</p>
 
             <p>One of the first wins for the new CMS was giving the marketing team an ability to build landing pages from a set of pre-built components.</p>
@@ -111,16 +119,17 @@
 
             <ul>
               <li>Achieving a balance between too much editing freedom, and not enough. Eg. allowing authors to add their own HTML proved a nightmare to maintain and unclosed tags could break the page.</li>
-              <li>Authors not understanding responsive design - that their content would adapt to mobile. Eg. insistence on “above the fold” and using too large images.</li>
-              <li>Finding experts and add-ons for your store</li>
+              <li>Authors do not understand responsive design; that their content needs to adapt to mobile. Eg. insistence on “above the fold” and using too large images.</li>
             </ul>
+
+            <h3>Finding experts and add-ons for your store</h3>
 
             <p>As well as earning revenue through recurring monthly plans, Neto derives some of its revenue from:</p>
 
-            <ul>
+            <ol>
               <li>Design and setup services</li>
               <li>Integrations with third-party software (eg. customers using a particular shipping or payment service).</li>
-            </ul>
+            </ol>
 
             <p>Neto has relationships with design studios around Australia who build ecommerce websites for clients and we advertise their services on the website as Neto Experts.</p>
 
@@ -128,28 +137,45 @@
 
 
             <p>Our Experts directory and Add-ons directory:</p>
-              <ul>
-                <li>Contained out-of-date content which was hard to update</li>
-                <li>Were difficult to navigate and to find relevant information</li>
-                <li>Did not meet accessibility and coding standards</li>
-              </ul>
 
-            <p>Though similar in some respects, the user intent differed between the directories. 
+            <ul>
+              <li>Contained out-of-date content which was hard to update</li>
+              <li>Were difficult to navigate and to find relevant information</li>
+              <li>Did not meet accessibility and coding standards</li>
+            </ul>
 
-            <p>For add-ons, we want to answer:
-            New user: “does Neto integrate with the software I already use?”
-            Looking for something specific
-            Current user: “how can I improve my store?”
-            General browsing, looking for inspiration
+            <p>Though similar in some respects, the user intent differed between the directories.</p> 
+
+            <h4>Integrate with Neto</h4> 
+
+            <p>For add-ons, we want to answer:</p>
+            <ol>
+              <li>For a new user: <em>“does Neto integrate with the software I already use?”</em> (looking for something specific)</li>
+              <li>For an existing user: <em>“how can I improve my store?”</em> (looking for inspiration and future capabilities; general browsing)</li>
+            </ol>
+
+            <figure>
+              <img src="../images/page/screen-neto-add-ons-listing.jpg" alt="Screenshot of the Neto add-ons listing" height="380" width="1202">
+              <figcaption>Add-ons listing</figcaption>
+            </figure> 
 
             <p>Showcasing our third-party integrations is most important for customers switching from another platform (eg. Shopify). It’s often a deal breaker if Neto cannot integrate with all the software that their previous platform integrated with. 
 
             <p>I audited the add-on content and rewrote most of the descriptions to focus more on each one’s benefits to a Neto user, rather than features and marketing spiel.
 
-            <p>For a faster browsing experience, I added a: 
+            <p>To allow users to browse faster, I added:</p>
             <ul>
-            <li>Quick-search to filter the listing page by keyword as you type</li>
-            <li>Quick-view to show add-on content in a modal instead of loading a new page</li>
+              <li>A quick-search to filter the listing page by keyword as you type</li>
+              <li>A quick-view to show add-on in a popup instead of loading a new page</li>
+            </ul>
+
+            <figure>
+              <img src="../images/page/screen-neto-add-ons-quickview.jpg" alt="Screenshot of a Neto add-ons quick-view" height="677" width="959">
+              <figcaption>Add-ons listing quick-view loads via AJAX in a modal</figcaption>
+            </figure> 
+
+
+            <h4>Need a Neto expert?</h4>
 
             <p>The Experts directory was more involved, as users needed to be able to refine the list of experts by the type of services they offered, location and budget.</p>
 
@@ -157,33 +183,48 @@
 
             <p><em>“I'm looking for help with X services in Y location for Z budget”</em></p>
 
+            <figure>
+              <img src="../images/page/screen-neto-experts-filter.jpg" alt="Screenshot of a Neto experts listing filters" height="511" width="1210">
+              <figcaption>Experts can be filtered by service, location or budget; and saved for later.</figcaption>
+            </figure> 
+
             <p>This allows users to compose their query more naturally than with separated dropdown fields.</p>
 
             <p>We added event tracking to these directories to monitor and measure click-throughs, engagement, if experts were contact, and if add-ons were installed. We have seen an increase in visits but did not have historical data to compare events from the previous version.</p>
 
 
             <h3>How much is that software in the window?</h3>
-            <p>The pricing page is a vital conversion point that simply wasn’t pulling its weight on neto.com.au. Neto pricing is a bit more complicated than its competitors, as there’s a fair amount of room to customise your subscription plan. Our goals were:
+            <p>The pricing page is a vital conversion point that simply wasn’t pulling its weight on <em>neto.com.au</em>. Neto pricing is a bit more complicated than its competitors, as there’s a fair amount of room to customise your subscription plan. Our goals were:</p>
 
-            Improve conversion rate
-            Clearer value proposition
-            Better explain terminology, and plan differentiation
-            Add the Neto 360 plan, and Amazon marketplace
-            Move from static HTML to content managed sections
-            Allow user to calculate total plan cost
-            Sell more large plans
-            More metrics on visitor behavior
+            <ol>
+              <li>Improve conversion rate</li>
+              <li>Clearer value proposition</li>
+              <li>Better explain terminology, and plan differentiation</li>
+              <li>Add new plans and sales channels</li>
+              <li>Allow authors to manage the page through the CMS (and rollback changes)</li>
+              <li>Allow user to calculate total plan cost</li>
+              <li>Sell more large plans</li>
+              <li>Improve metrics on visitor behavior</li>
+            </ol>
 
             <p>I worked closely with the sales team and used their feedback and knowledge of our customer needs to build a new pricing page.</p>
 
-            <p>Some improvements:</p>
+            <p>Some improvements made to the ner version were:</p>
             <ul>
-            <li>Split out the full feature list to give the key comparison points more focus</li>
-            <li>Clearer call-to-actions and next steps</li>
-            <li>Improved explanation of Sales Channels</li>
-            <li>More than halved the page load time</li>
-            <li>Made the page easier to use on mobile</li>
+              <li>Split out the complete feature list to give the key comparison points more focus</li>
+              <li>Clearer call-to-actions and next steps</li>
+              <li>Improved explanation of Sales Channels</li>
+              <li>More than halved the page load time</li>
+              <li>Made the page easier to use on mobile</li>
             </ul>
+
+            <figure>
+              <img src="../images/page/screen-neto-pricing-plans.jpg" alt="Screenshot of the Neto pricing plans" height="715" width="1183">
+              <figcaption>New pricing plans</figcaption>
+            </figure> 
+
+
+            <h4>Calculate plan pricing</h4>
 
             <p>One recurring complaint we had from prospects was they had difficulty calculating the true cost of using Neto. To address this, I built <a href="https://www.netohq.com/pricing/calculator" title="View Neto pricing calculator">a pricing calculator</a> which allowed them to:</p>
 
@@ -194,7 +235,13 @@
               <li>Email them a quote</li>
             </ul>
 
-            <p>The calculator was built with Vue JS so the price estimate could change immediately based on their selections. I planned to take this further so users could estimate their setup and store design costs, but we can’t accurately quantify these prices yet. However, the calculator is flexible to allow this in future. It also supports multiple currencies and tax rates, for New Zealand users. This has been helpful for design partners as well, to quote their clients who want to use Neto.</p>
+           <!-- <figure class="inline">
+              <img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">
+              <figcaption>New pricing plans</figcaption>
+            </figure> -->
+
+            <p><img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388"> The calculator was built with Vue JS so the price estimate could change immediately based on their selections. I planned to take this further so users could estimate their setup and store design costs, but we can’t accurately quantify these prices yet. However, the calculator is flexible to allow this in future. It also supports multiple currencies and tax rates, for New Zealand users. This has been helpful for design partners as well, to quote their clients who want to use Neto.
+            </p>
 
             <p>When the new pricing page went live, we saw:</p>
 
@@ -205,17 +252,17 @@
             </ul>
 
             <p>The sales team were also happier as they rely on this page often when talking to prospects.</p>
-
-            <p>TBC...</p>
+ 
+            <p>...TBC</p>
 
           </div>
         </article>
 
         <footer class="page-cta">
-          <h2><a href="mailto:hello@seanockert.com" title="Send me an email">
-            <img src="../images/face.png" alt="Sean's face">
-            Let's work together<span>.</span></a>
-          </h2>
+          <h4><a href="mailto:hello@seanockert.com" title="Send me an email">
+            <img src="../images/face.png" alt="Sean's face" height="70" width="60">
+            Like what you see? Let's work together<span>.</span></a>
+          </h4>
           <ul class="nolist">
             <li><a href="https://twitter.com/seanockert" title="Follow me on Twitter">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with me on LinkedIn">LinkedIn</a></li>
