Improve intro copy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sean Ockert - web developer and designer</title>
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="dist/css/style.css?rev=7d51a7b9615790e9b5b0361d2672ef1f" rel="stylesheet" type="text/css">
+    <link href="dist/css/style.css?rev=3670ff65e2281810f564e6f89a4b1768" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
@@ -68,11 +68,11 @@
           <div class="inner">
             <div class="column" id="projects">
             <header class="intro">
-              <strong id="i">Greetings from the trenches!</strong> 
-              <p>I've battled browser quirks, web 2.0, responsive design, cloud servers, and oh so many Javascript frameworks.</p>
+              <h4>Greetings from the trenches!</h4> 
+              <p>Find me wielding wireframes &mdash; battling responsive layouts, sneaky browser quirks, and hoards of Javascript frameworks.</p>
 
-              <p>Web tech is wonderful. But after ten years of immersion, I've learned to zoom out and champion a great user experience above all else.</p>
-              <p>Need a web expert for the frontline of your next project? <a href="mailto:hello@seanockert.com" title="Email Sean">Get in touch</a>.</p>
+              <p>Ten years combat hardened. Still championing usability. Pedantic about performance. Victory is a <strong>product-market fit</strong>, <strong>great user experience</strong>, and <strong>happy clients</strong>.</p>
+              <p>Need to <strong>recruit a web veteran</strong> for your next project? <a href="mailto:hello@seanockert.com" title="Email Sean">Get in touch</a>.</p>
             </header>
             
             <h2><span>Recent work</span></h2>
