--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <div class="column" id="projects">
             <header class="intro">
               <h4>Greetings from the trenches!</h4> 
-              <p>Find me wielding wireframes &mdash; battling responsive layouts, sneaky browser quirks, and hoards of Javascript frameworks.</p>
+              <p>Find me wielding wireframes &mdash; battling responsive layouts, sneaky browser quirks, and the JavaScript hoards.</p>
 
-              <p>Ten years combat hardened. Still championing usability. Pedantic about performance. Victory is a <strong>product-market fit</strong>, <strong>great user experience</strong>, and <strong>happy clients</strong>.</p>
+              <p>Ten years of championing usability. Pedantic about performance. Victory tastes like a <strong>product-market fit</strong>, <strong>great user experience</strong>, and <strong>happy clients</strong>.</p>
               <p>Need to <strong>recruit a web veteran</strong> for your next project? <a href="mailto:hello@seanockert.com" title="Email Sean">Get in touch</a>.</p>
             </header>
             
@@ -86,8 +86,8 @@
               </li> 
               <li>
                 <a href="https://www.student.qut.edu.au/" title="Visit QUT Student Directory">
-                  <h3>QUT Student Directory</h3> 
-                  <p>Re-development and IA of the Queensland University of Technology's <span>student directory.</span></p>
+                  <h3>Queensland University of Technology</h3> 
+                  <p>Redevelopment of the university's Student Directory and <span>HiQ website</span></p>
                   <div class="link">Visit site &rarr;</div>
                 </a>
               </li>              
@@ -106,16 +106,16 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.gdaa.com.au" title="Visit Games Developers Association of Australia website">
-                  <h3>Games Developers Association of Australia</h3> 
-                  <p>Redesign of WordPress site to showcase Australian <span>game developers.</span></p>
+                <a href="https://thesteepery.com.au" title="Visit The Steepery website">
+                  <h3>The Steepery</h3> 
+                  <p>Bespoke Shopify store selling boutique <span>tea products.</span></p>
                   <div class="link">Visit site &rarr;</div>
                 </a>
               </li>
               <li>
-                <a href="https://thesteepery.com.au" title="Visit The Steepery website">
-                  <h3>The Steepery</h3> 
-                  <p>A custom-built Shopify store selling boutique <span>tea products.</span></p>
+                <a href="https://www.gdaa.com.au" title="Visit Games Developers Association of Australia website">
+                  <h3>Games Developers Association of Australia</h3> 
+                  <p>Redesign of WordPress site to showcase Australian <span>game developers.</span></p>
                   <div class="link">Visit site &rarr;</div>
                 </a>
               </li>
@@ -126,20 +126,20 @@
               <li>
                 <a href="https://so-neto-email.surge.sh/" title="View Neto Email Content Generator project">
                   <h3>Email Content Generator</h3> 
-                  <p>Quickly construct emails from pre-witten content. Internal tool for <span>Neto staff</span></p>
+                  <p>Construct emails from pre-witten content. Internal tool for <span>Neto staff.</span></p>
                   <div class="link">View project &rarr;</div>
                 </a>
               <li>
                 <a href="https://so-tinysums.surge.sh/" title="View TinySums project">
                   <h3>Tiny Sums</h3> 
-                  <p>Do back-of-the-envelope calculations using natural language. A real workout for <span>regex skills.</span></p>
+                  <p>Do back-of-the-envelope calculations with natural language. A real workout for <span>regex skills.</span></p>
                   <div class="link">View project &rarr;</div>
                 </a>
               </li> 
               <li>
                 <a href="https://so-card-sort.surge.sh/" title="View Card Sort">
                   <h3>Card Sort</h3> 
-                  <p>A Trello-like board with cards, for lists or card-sorting exercises. Built <span>with Vue</span></p>
+                  <p>A Trello-like board, for lists or card-sorting exercises. Built <span>with Vue.</span></p>
                   <div class="link">View project &rarr;</div>
                 </a>
               </li>
